adjusting spacing issues

--- a/client/src/components/ProjectBox.css
+++ b/client/src/components/ProjectBox.css
@@ -20,6 +20,7 @@
     padding-bottom:18px;
     position: absolute;
     bottom:0;
+    margin-top:20px;
 }
 
 .projectContainer {
