--- a/client/src/pages/Projects.css
+++ b/client/src/pages/Projects.css
@@ -11,7 +11,7 @@
 }
 
 .projectslogo {
-    font-size:40px;
+    font-size:36px;
     font-family: futura-pt, sans-serif;
     font-weight: 500;
     font-style: normal;
